# labcpp

./: commands for lab2.txt  iterator.hpp  lab4.txt
copy_to_tg/: io_vga_ps2.c  io_vga_ps2.h  linker_script.ld  main.c  makefile  maths.c  maths.h  platform.h  ps2.c  ps2.h  riscv_string.c  riscv_string.h  scan_code_decoder.h  vga.c  vga.h
lab1/include/: introduction.hpp
lab2/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  lab4.txt  main
lab2/cmake/: AddCatch2.cmake
lab2/include/: CTestTestfile.cmake  Makefile  cmake_install.cmake
lab2/tests/: .iomanip.cpp.swp  .iomanip.hpp.swp  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  iomanip.cpp  iomanip.hpp  iomanip_include-b12d07c.cmake  iomaniptests  iomaniptests_include-b12d07c.cmake  iomaniptests_tests-b12d07c.cmake
lab3/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  main  main.cpp
lab3/cmake/: AddCatch2.cmake  AddGtest.cmake
lab3/googletest/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  google_tests  googletest.cpp
lab3/src/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  diff.cpp  diff.h
lab3/test/: CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  test.cpp  unit_tests  unit_tests_include-b12d07c.cmake  unit_tests_tests-b12d07c.cmake
